--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.103 2000-02-14 08:04:19 rug Exp $
+dnl $Id: configure.in,v 1.104 2000-02-15 05:34:37 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -30,7 +30,7 @@ dnl *
 LTVERSION="2:0:0"
 AC_SUBST(LTVERSION)
 
-AM_INIT_AUTOMAKE(namazu, 1.9.14)
+AM_INIT_AUTOMAKE(namazu, 1.9.15)
 AM_MAINTAINER_MODE
 
 dnl *
