--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.12 2000-02-15 03:06:32 satoru Exp $
+# $Id: mknmz.in,v 1.13 2000-02-15 13:19:19 makoto Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -1170,10 +1170,10 @@ sub find_target (@) {
 
     my $elapsed = time() - $start ;
     $elapsed += 1 ;   # to round up and avoid 0 
-    util::vprint(_("findfiles    ended: "). localtime(time()). "\n" );
+    util::vprint(_("findfiles    ended: "). localtime(time()). "\n");
     util::vprint(sprintf(_("Target Files: %d (Scan Performance: Elapsed Sec.: %d, Files/sec: %.1f)\n"), 
 	   $#flist + 1, $elapsed, 
-	   ($#flist + 1 ) /$elapsed ));
+	   ($#flist + 1) /$elapsed));
 
     return @flist;
 }
