--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -9,126 +9,164 @@ $ADDRESS = '@OPT_ADMIN_EMAIL@';
 
 #---------------------------------------------------------------
 #
-# Required softwares.
+# Softwares.
 #
 
+#
 # Network Kanji Filter nkf v1.62 or later
+#
 $NKF = "@NKF@"; 
 
+#
 # KAKASI or ChaSen (to handle Japanese characters)
+#
 $KAKASI = "@KAKASI@ -ieuc -oeuc -w";
 
+#
 # ChaSen 1.51 or later (simple wakatigaki)
+#
 $CHASEN = "@CHASEN@ -j -F '\%m '";
 
+#
 # ChaSen 1.51 or later (with morphological processing)
+#
 $CHASEN_NOUN = "@CHASEN@ -j -F '\%m %H\\n'";
 
-# Default Japanese processer
+#
+# Default Japanese processer.
+#
 $WAKATI  = $@OPT_WAKATI_DEFAULT@;
 
 #---------------------------------------------------------------
 #
-# Default Settings.
+# Regular Expression Patterns.
 #
 
-# Files can be omission in URI. e.g. index.html
-# name of the file or files which can be abbreviated.
-# (specify by regular expression)
-# e.g. index.html|index.htm|Default.html
-# it's useful to use Namazu as a WWW search engine.
+#
+# This pattern specifies file names which can be omitted 
+# in URI.  e.g., index.html|index.htm|Default.html
+# This setting is useful when you use Namazu as a WWW search engine.
+#
 $DEFAULT_FILE = "index.html";
 
-# HTML extentions such as .htm, .html, .shtml, .phtml, .html.en, .html.ja, .asp
+#
+# This pattern specifies HTML suffixes.
+#
 $HTML_SUFFIX = 'html?|[ps]html|html\.[a-z]{2}|asp|cgi';
 
-# Target files' regex. (case insensitive)
-# Do *not* use '$' and '^' regular expression meta characters.
-# That will be automatically added by mknmz.
+#
+# This pattern specifies file names which will be targeted.
+# NOTE: Do NOT use '$' and '^' meta characters.
+#
 $ALLOW_REGEX = ".*\.(?:$HTML_SUFFIX)|.*\.txt|.*_default|.*\.pdf|.*\.doc|.*\.tex";
 
-# Non-Target files' regex
-# this regular expression describes the names of the files which
-# you do *not* want to index (case insensitive). this setting is
-# effective when mknmz runs with -a option.
-# Do *not* use '$' and '^' regular expression meta characters.
-# that will be automatically appended by mknmz.pl.
+#
+# This pattern specifies file names which will NOT be targeted.
+# NOTE: Do NOT use '$' and '^' meta characters.
 #
 $DENY_REGEX = '.*\.gif|.*\.png|.*\.(jpg|jpeg)|.*\.tar\.gz|core|.*\.bak|.*~|\..*|\x23.*|NMZ\..*';
 
-# Pathnames which match this regex will be excluded.
+#
+# This pattern specifies PATHNAMEs which will NOT be targeted.
+#
 $EXCLUDE_REGEX = undef;
 
-# Place where CGI prgrams is in. e.g. /cgi-bin/, /htbin/
+#
+# This pattern specifies where CGI prgrams are located.
+#
 $CGI_DIR = '/(cgi-bin|htbin)/';
 
-# MHonArc's header for identification (regex)
+#
+# This pattern specifies MHonArc's header for identification.
+#
 $MHONARC_HEADER = '<\!-- MHonArc v\d\.\d\.\d -->';
 
-# MHonArc's message file
+#
+# This pattern specifies MHonArc's message file names.
+# 
 $MHONARC_MESSAGE_FILE = 'msg\d{5}\.html(?:\.gz)?';
 
-# Mail/News's headers should be remained as searchable text
-# (case insensitive)
+#
+# This pattern specifies Mail/News's fields in its header which 
+# should be searchable.  NOTE: case-insensitive
+#
 $REMAIN_HEADER = "From|Date|Message-ID";
 
-# Fields for field-specified search (NMZ.field.*)
+#
+# This pattern specifies fields which used for field-specified 
+# searching.  NOTE: case-insensitive
+# 
 $SEARCH_FIELD = "message-id|subject|from|date|uri|newsgroups|to|summary|size";
 
-# Aliases for NMZ.field.*
-%FIELD_ALIASES = ('title' => 'subject', 'author' => 'from');
-
-# Meta tags which you want to use for field-specified search.
+#
+# This pattern specifies meta tags which used for field-specified 
+# searching.  NOTE: case-insensitive
+#
 $META_TAGS = 'keywords|description';
 
-$TEXT_TITLE = " (Text File) "; # text file
-$NO_TITLE = "No title in original";    # document has no title
+#
+# This pattern specifies aliases for NMZ.field.* files.
+# NOTE: Editing NOT recommended.
+#
+%FIELD_ALIASES = ('title' => 'subject', 'author' => 'from');
+
+#
+# This pattern specifies HTML elements which should be replaced with 
+# null string when removing them. Normally, the elements are replaced 
+# with a single space character.
+#
+$NON_SEPARATION_ELEMENTS = 'A|TT|CODE|SAMP|KBD|VAR|B|STRONG|I|EM|CITE|FONT|U|'.
+                       'STRIKE|BIG|SMALL|DFN|ABBR|ACRONYM|Q|SUB|SUP|SPAN|BDO';
 
 
 #---------------------------------------------------------------
 # 
-# Size of files indexed at once on memory. (bytes)
-# If you have much memory, you can increase this value. (128MB or more)
-# If you have not much memory, you can decrease this value. (32MB or less)
+# Size of files which will be indexed at once on memory. (bytes)
+# If you have much memory, you can increase this. (128 MB or more)
+# If you have not much memory, you can decrease this. (32MB or less)
 #
 
 $ON_MEMORY_MAX   = 5000000;
-#                  M  K  bytes   
 
+#
 # Text size limitation. a text larger than this value will be ignored.
+#
 $TEXT_SIZE_MAX   =  600000;
-#                  M  K  bytes   
 
+#
 # Word length limitation. The word longer than this value will be ignored.
+#
 $WORD_LENG_MAX   = 128;
+
+$TEXT_TITLE = " (Text File) "; # text file
+$NO_TITLE   = "No title in original";    # document has no title
 
 
 #---------------------------------------------------------------
 #
 # Weights for HTML elements.
 #
-
 %Weight = 
     (
      'html' => {
-	 'title'  => 16,
-	 'h1'     => 8,
-	 'h2'     => 7,
-	 'h3'     => 6,
-	 'h4'     => 5,
-	 'h5'     => 4,
-	 'h6'     => 3,
-	 'a'      => 4,
-	 'strong' => 2,
-	 'em'     => 2,
-	 'kbd'    => 2,
-	 'samp'   => 2,
-	 'var'    => 2,
-	 'code'   => 2,
-	 'cite'   => 2,
-	 'abbr'   => 2,
-	 'acronym'=> 2,
-	 'dfn'    => 2,
+         'title'  => 16,
+         'h1'     => 8,
+         'h2'     => 7,
+         'h3'     => 6,
+         'h4'     => 5,
+         'h5'     => 4,
+         'h6'     => 3,
+         'a'      => 4,
+         'strong' => 2,
+         'em'     => 2,
+         'kbd'    => 2,
+         'samp'   => 2,
+         'var'    => 2,
+         'code'   => 2,
+         'cite'   => 2,
+         'abbr'   => 2,
+         'acronym'=> 2,
+         'dfn'    => 2,
      },
      'metakey' => 32, # for <META NAME="keywords" CONTENT="foo bar">
      'headers' => 8,  # for mail/news' headers
@@ -136,18 +174,10 @@ $WORD_LENG_MAX   = 128;
 
 #---------------------------------------------------------------
 #
-# Elements which should be replaced with null string when
-# removing elements.
-#
-$NON_SEPARATION_ELEMENTS = 'A|TT|CODE|SAMP|KBD|VAR|B|STRONG|I|EM|CITE|FONT|U|'.
-                       'STRIKE|BIG|SMALL|DFN|ABBR|ACRONYM|Q|SUB|SUP|SPAN|BDO';
-
-
-#---------------------------------------------------------------
-#
-# Length of string which should be ignored at weighting.
+# Length of a string which should be ignored at HTML weighting.
 # Because there are people has a bad manner using <h[1-6]> for
-# specifying a font size.
+# changing a font size.
+#
 
 $INVALID_LENG = 128; 
 
