--- a/pl/var.pl.in
+++ b/pl/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.9 2000-02-06 07:36:44 satoru Exp $
+# $Id: var.pl.in,v 1.10 2000-02-16 10:22:07 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -35,7 +35,7 @@ $MAILING_ADDRESS = '@MAILING_ADDRESS@';
 
 #-----------------------------------------------------------
 #
-# Names of Index files.
+# File names of index files.
 #
 
 my $base      = "NMZ";
@@ -81,9 +81,6 @@ $NMZ{'__w'}  = "$base.tmp_w";
 $NMZ{'__p'}  = "$base.tmp_p";
 $NMZ{'__pi'} = "$base.tmp_pi";
 
-
-$OUTPUT_DIR = undef;
-
 #-----------------------------------------------------------
 #
 # Options
@@ -124,9 +121,9 @@ $Opt{'noupdate'} = 0;
 # Misc
 #
 
-$INTSIZE = 4;
-$USE_NKF_MODULE   = 0;
-$PREFIX = "";
+$OUTPUT_DIR = undef;
+$NO_TITLE   = N_("No title in original");
+$USE_NKF_MODULE = 0;
 
 %REQUIRE_ACTIONS = ();
 %RECURSIVE_ACTIONS = ();
@@ -142,5 +139,8 @@ $PREFIX = "";
     (
      'text/plain' => "yes",
      );
+
+# Dummy function for gettextization.
+sub N_ {};
 
 1;
