--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -16,13 +16,6 @@ $ADDRESS = '@OPT_ADMIN_EMAIL@';
 #
 
 #
-# This pattern specifies file names which can be omitted 
-# in URI.  e.g., index.html|index.htm|Default.html
-# This setting is useful when you use Namazu as a WWW search engine.
-#
-$DEFAULT_FILE = "index.html";
-
-#
 # This pattern specifies HTML suffixes.
 #
 $HTML_SUFFIX = 'html?|[ps]html|html\.[a-z]{2}|asp|cgi';
@@ -33,7 +26,7 @@ $HTML_SUFFIX = 'html?|[ps]html|html\.[a-z]{2}|asp|cgi';
 #       Do NOT use `$' or `^' anchors.
 #       Case-insensitive.
 #
-$ALLOW_REGEX = ".*\.(?:$HTML_SUFFIX)|.*\.txt|.*\.pdf|.*\.doc|.*\.tex";
+$ALLOW_FILE = ".*\.(?:$HTML_SUFFIX)|.*\.txt|.*\.pdf|.*\.doc|.*\.tex";
 
 #
 # This pattern specifies file names which will NOT be targeted.
@@ -41,13 +34,21 @@ $ALLOW_REGEX = ".*\.(?:$HTML_SUFFIX)|.*\.txt|.*\.pdf|.*\.doc|.*\.tex";
 #       Do NOT use `$' or `^' anchors.
 #       Case-insensitive.
 #
-$DENY_REGEX = '.*\.(gif|png|jpg|jpeg)|.*\.tar\.gz|core|.*\.bak|.*~|\..*|\x23.*|NMZ\..*';
+$DENY_FILE = '.*\.(gif|png|jpg|jpeg)|.*\.tar\.gz|core|.*\.bak|.*~|\..*|\x23.*|NMZ\..*';
 
 #
 # This pattern specifies PATHNAMEs which will NOT be targeted.
 # NOTE: Usually specified by --exclude=regex option.
 #
-$EXCLUDE_REGEX = undef;
+$EXCLUDE_PATH = undef;
+
+#
+# This pattern specifies file names which can be omitted 
+# in URI.  e.g., 'index.html|index.htm|Default.html'
+#
+# NOTE: This is similar to Apache's "DirectoryIndex" directive.
+#
+$DIRECTORY_INDEX = "";
 
 #
 # This pattern specifies Mail/News's fields in its header which 
