* doc/ja/Makefile.am (EXTRA_DIST): Add namazu.css. 	(html_DATA): Remove namazu.css
	* filter/gfilter.pl (filename_to_title): Do not use
	$conf::TEXT_TITLE.

--- a/doc/ja/Makefile.am
+++ b/doc/ja/Makefile.am
@@ -1,7 +1,7 @@
 htmldir = $(pkgdatadir)/doc/ja
 
-html_DATA = namazu.css manual.html nmz.html tips.html tutorial.html
-EXTRA_DIST = $(html_DATA)
+html_DATA  = manual.html nmz.html tips.html tutorial.html
+EXTRA_DIST = namazu.css $(html_DATA)
 
 # htmlint <http://openlab.ring.gr.jp/k16/htmllint/htmllint.html>
 lint: $(html_DATA)
