--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.16 2000-02-18 04:00:01 satoru Exp $
+# $Id: mknmz.in,v 1.17 2000-02-19 08:55:02 rug Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -234,7 +234,7 @@ sub init () {
     }
 
     # set LANG
-    for my $cand (("LC_ALL", "LC_MESSAGES", "LANG")) {
+    for my $cand (("LANGUAGE", "LC_ALL", "LC_MESSAGES", "LANG")) {
 	if (defined($ENV{$cand})) {
 	    $LANG = $ENV{$cand};
 	    last;
